--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c
 osx_image: xcode8.2
 xcode_project: Test_Travis_CI.xcodeproj 
 xcode_scheme: Test_Travis_CI
-
+xcode_sdk: iphonesimulator10.1
